[tool.poetry]
name = "asus-router-logger"
version = "0.1.0"
description = ""
repository = "https://github.com/mastdi/asus-router-logger"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "asus_router_logger"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
