[tool.poetry]
name = "asus-router-logger"
version = "0.1.0"
description = ""
repository = "https://github.com/mastdi/asus-router-logger"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "asus_router_logger"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
anyio = "^3.6.2"
macaddress = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
pytest = "^7.2.1"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.poetry.scripts]
asus-router-logger = "asus_router_logger.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
